fix spacing on work

--- a/src/Experience/Experience.scss
+++ b/src/Experience/Experience.scss
@@ -94,7 +94,7 @@
       align-items: center;
       padding-bottom: 3vh;
       width: 90%;
-      margin-top: 5px;
+      margin-top: 20px;
       @media (min-width: 1000px) {
         width: 980px;
       }
@@ -141,8 +141,8 @@
         position: absolute;
         margin-top: 2vh;
         @media (min-width: 1000px) {
-          height: 170px;
-          width: 170px;
+          height: 155px;
+          width: 160px;
         }
       }
       .htt-img {
@@ -169,7 +169,7 @@
         position: absolute;
         margin-top: 2vh;
         @media (min-width: 1000px) {
-          height: 170px;
+          height: 160px;
           width: 210px;
         }
       }
@@ -180,7 +180,7 @@
           width: 60%;
           margin-top: 6px;
           @media (min-width: 1000px) {
-            margin-top: 15px;
+            margin-top: 8px;
           }
         }
       }
